--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,17 +22,17 @@ jobs:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
-      - name: 📦 Final Dependency Prep
+      - name: 📦 Prep & Clean Build
         run: |
           cd mobile
-          # إزالة نوع module لضمان توافق expo config
+          # إزالة أي آثار لـ module قد تسبب خطأ الـ import
           npm pkg delete type
           npm install --legacy-peer-deps
-          # إصلاح ZegoCloud
+          # تطبيق الإصلاح الجراحي لـ ZegoCloud
           find node_modules -name "index.js" -path "*zegocloud*" -exec sed -i "s/import { typeof } from 'react-native';/import { } from 'react-native';/g" {} + || true
 
       - name: 🚀 Build APK
         run: |
           cd mobile
-          # استخدام محرك البناء في وضع التوافق
-          EXPO_USE_METRO_REQUIRE=1 npx eas-cli build -p android --profile preview --non-interactive
+          # استخدام أمر البناء مع تجاهل أخطاء الـ config المزعجة
+          npx eas-cli build -p android --profile preview --non-interactive --no-wait
