--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       - name: 📦 Match Credentials & Prep
         run: |
           cd mobile
-          # إنشاء app.json لضمان مطابقة Package Name مع Keystore
+          # إنشاء app.json لضمان مطابقة الهوية مع المفتاح المرفوع
           echo '{
             "expo": {
               "name": "Oasis",
@@ -43,17 +43,17 @@ jobs:
             }
           }' > app.json
           
-          # مسح أي قيود قديمة وتثبيت التبعيات مع تجاهل التعارضات
           npm pkg delete type
+          # حل مشكلة تعارض النسخ التي ظهرت في سجل 35
           npm install --legacy-peer-deps
           
-          # إصلاح ZegoCloud لضمان فتح نفق الاتصال
+          # إصلاح كود ZegoCloud لفتح نفق الاتصال بنجاح
           find node_modules -name "index.js" -path "*zegocloud*" -exec sed -i "s/import { typeof } from 'react-native';/import { } from 'react-native';/g" {} + || true
 
-      - name: 🚀 Build APK (Force Integration)
+      - name: 🚀 Build APK (Fixed Command)
         run: |
           cd mobile
-          # تفعيل خيار التجاهل التلقائي لتعارضات المكتبات أثناء البناء السحابي
+          # إجبار النظام على استخدام التبعيات القديمة أثناء التجميع السحابي
           export NPM_CONFIG_LEGACY_PEER_DEPS=true
-          # بناء التطبيق مع استخدام مفتاح التوقيع المرفوع مسبقاً
-          npx eas-cli build -p android --profile preview --non-interactive --auto-submit-credentials
+          # الأمر المصحح: إزالة الشرطتين الزائدتين لضمان استمرارية البناء
+          npx eas-cli build --platform android --profile preview --non-interactive
