--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       - name: 📦 Match Credentials & Prep
         run: |
           cd mobile
-          # إنشاء app.json لضمان مطابقة الهوية مع المفتاح المرفوع
+          # إنشاء app.json لضمان مطابقة الهوية com.aboahj.oasisapp مع المفتاح المرفوع
           echo '{
             "expo": {
               "name": "Oasis",
@@ -43,17 +43,17 @@ jobs:
             }
           }' > app.json
           
+          # إزالة قيود النوع وتثبيت التبعيات مع حل تعارض النسخ (ERESOLVE)
           npm pkg delete type
-          # حل مشكلة تعارض النسخ التي ظهرت في سجل 35
           npm install --legacy-peer-deps
           
-          # إصلاح كود ZegoCloud لفتح نفق الاتصال بنجاح
+          # إصلاح ZegoCloud لضمان فتح نفق الاتصال بنجاح
           find node_modules -name "index.js" -path "*zegocloud*" -exec sed -i "s/import { typeof } from 'react-native';/import { } from 'react-native';/g" {} + || true
 
       - name: 🚀 Build APK (Fixed Command)
         run: |
           cd mobile
-          # إجبار النظام على استخدام التبعيات القديمة أثناء التجميع السحابي
+          # إجبار الخادم السحابي على قبول التعارضات أثناء التجميع النهائي
           export NPM_CONFIG_LEGACY_PEER_DEPS=true
-          # الأمر المصحح: إزالة الشرطتين الزائدتين لضمان استمرارية البناء
+          # استخدام الأمر القياسي الصحيح لتجنب خطأ "الوسيط غير المتوقع"
           npx eas-cli build --platform android --profile preview --non-interactive
