--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       - name: 📦 Match Credentials & Prep
         run: |
           cd mobile
-          # إنشاء app.json لضمان مطابقة الهوية com.aboahj.oasisapp مع المفتاح المرفوع
+          # تأمين هوية التطبيق لتطابق مفتاحك (Keystore) المرفوع
           echo '{
             "expo": {
               "name": "Oasis",
@@ -43,17 +43,16 @@ jobs:
             }
           }' > app.json
           
-          # إزالة قيود النوع وتثبيت التبعيات مع حل تعارض النسخ (ERESOLVE)
+          # إجبار التثبيت المحلي لتجاوز تعارض النسخ ERESOLVE
           npm pkg delete type
           npm install --legacy-peer-deps
           
-          # إصلاح ZegoCloud لضمان فتح نفق الاتصال بنجاح
+          # إصلاح ZegoCloud لضمان فتح نفق الاتصال
           find node_modules -name "index.js" -path "*zegocloud*" -exec sed -i "s/import { typeof } from 'react-native';/import { } from 'react-native';/g" {} + || true
 
-      - name: 🚀 Build APK (Fixed Command)
+      - name: 🚀 Build APK (Force Offline Bundle)
         run: |
           cd mobile
-          # إجبار الخادم السحابي على قبول التعارضات أثناء التجميع النهائي
+          # إجبار نظام EAS على تجاهل التحقق من التبعيات واستخدام ما تم تثبيته بالفعل
           export NPM_CONFIG_LEGACY_PEER_DEPS=true
-          # استخدام الأمر القياسي الصحيح لتجنب خطأ "الوسيط غير المتوقع"
-          npx eas-cli build --platform android --profile preview --non-interactive
+          npx eas-cli build --platform android --profile preview --non-interactive --local-bundle
