--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,9 @@ jobs:
       - name: 📦 Match Credentials & Prep
         run: |
           cd mobile
+          # إنشاء ملف الإعدادات لإجبار الخادم على قبول تعارض المكتبات (حل جذري لـ ERESOLVE)
+          echo "legacy-peer-deps=true" > .npmrc
+          
           # إنشاء app.json لضمان مطابقة الهوية com.aboahj.oasisapp مع المفتاح المرفوع
           echo '{
             "expo": {
@@ -47,13 +50,13 @@ jobs:
           # حل مشكلة تعارض النسخ محلياً قبل الرفع
           npm install --legacy-peer-deps
           
-          # إصلاح كود ZegoCloud لضمان استقرار الاتصال
+          # إصلاح كود ZegoCloud لضمان استقرار الاتصال وفتح نفق البيانات
           find node_modules -name "index.js" -path "*zegocloud*" -exec sed -i "s/import { typeof } from 'react-native';/import { } from 'react-native';/g" {} + || true
 
       - name: 🚀 Build APK (Fixed Final Command)
         run: |
           cd mobile
-          # إجبار الخادم على استخدام التبعيات القديمة دون توقف
+          # إجبار الخادم السحابي على استخدام التبعيات القديمة أثناء التجميع النهائي
           export NPM_CONFIG_LEGACY_PEER_DEPS=true
-          # استخدام الأمر القياسي الأكثر استقراراً لتجنب أخطاء الوسائط غير المعروفة
+          # استخدام الأمر القياسي الصحيح لتجنب أخطاء الوسائط (مثل خطأ سطر 17 السابق)
           npx eas-cli build --platform android --profile preview --non-interactive
