--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,10 +25,10 @@ jobs:
       - name: 📦 Match Credentials & Prep
         run: |
           cd mobile
-          # إعداد ملف الإعدادات لإجبار الخادم على قبول تعارض المكتبات (حل ERESOLVE)
+          # حل جذري لخطأ ERESOLVE ومنع توقف البناء في الثواني الأولى
           echo "legacy-peer-deps=true" > .npmrc
           
-          # إنشاء app.json لضمان مطابقة الهوية com.aboahj.oasisapp
+          # تأمين هوية التطبيق com.aboahj.oasisapp لتطابق مفتاح التوقيع
           echo '{
             "expo": {
               "name": "Oasis",
@@ -48,22 +48,22 @@ jobs:
           
           npm pkg delete type
           
-          # تثبيت المكتبة المفقودة التي سببت خطأ سطر 911 في المحاولة السابقة
-          npm install react-delegate-component --save --legacy-peer-deps
+          # تثبيت المكتبات المفقودة التي سببت فشل سطر 1038 و 911 (الملاحة وواجهات Zego)
+          npm install react-delegate-component @react-navigation/native-stack --save --legacy-peer-deps
           
-          # حل مشكلة تعارض النسخ العام
+          # دمج التبعيات العامة للمشروع
           npm install --legacy-peer-deps
           
-          # إصلاح جذري لتعارض الأسماء (حل أخطاء السطور 104 و 111)
+          # إصلاح تعارض الأسماء في AndroidManifest لضمان عبور مرحلة gradlew
           find node_modules -name "AndroidManifest.xml" -exec sed -i 's/package="com.zegouikitrebuiltcallrn"/ /g' {} + || true
           
-          # إصلاح كود ZegoCloud لضمان استقرار الاتصال وفتح نفق البيانات
+          # إصلاح كود ZegoCloud لفتح نفق البيانات المشفر بنجاح
           find node_modules -name "index.js" -path "*zegocloud*" -exec sed -i "s/import { typeof } from 'react-native';/import { } from 'react-native';/g" {} + || true
 
       - name: 🚀 Build APK (Final Fix & Clear Cache)
         run: |
           cd mobile
-          # إجبار الخادم السحابي على استخدام التبعيات القديمة
+          # إجبار الخادم السحابي على قبول التعارضات أثناء التجميع النهائي
           export NPM_CONFIG_LEGACY_PEER_DEPS=true
-          # استخدام خيار مسح التخزين المؤقت لضمان بناء نظيف تماماً وتفادي أخطاء الـ Gradle السابقة
+          # استخدام --clear-cache لضمان دمج الأكواد الجديدة وحذف أي ملفات تالفة من المحاولات السابقة
           npx eas-cli build --platform android --profile preview --non-interactive --clear-cache
