--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,9 +25,10 @@ jobs:
       - name: 📦 Match Credentials & Prep
         run: |
           cd mobile
-          # حل تعارضات npm
+          # إجبار npm على قبول تداخل التبعيات
           echo "legacy-peer-deps=true" > .npmrc
           
+          # تهيئة إعدادات التطبيق الأساسية والأذونات
           echo '{
             "expo": {
               "name": "Oasis",
@@ -46,28 +47,29 @@ jobs:
           
           npm pkg delete type
           
-          # تثبيت المكتبات الأساسية مع تحديد إصدارات مستقرة
+          # 1. تثبيت أدوات بناء Expo الأساسية (لحل أخطاء الصور 1000079056 و 1000079058)
           npm install @expo/config-plugins@~8.0.0 @expo/prebuild-config expo-modules-core@~1.12.0 --save --legacy-peer-deps
+          
+          # 2. تثبيت مكتبات الإشعارات والاتصال (ZegoCloud)
           npm install expo-notifications expo-device expo-constants crypto-js react-delegate-component --save --legacy-peer-deps
           npm install @zegocloud/zego-uikit-prebuilt-call-rn zego-zim-react-native zego-zpns-react-native --save --legacy-peer-deps
           
-          # التثبيت الشامل
+          # 3. التثبيت الشامل للمشروع
           npm install --legacy-peer-deps
           
-          # [إصلاح سحري] تصحيح مراجع Kotlin و Gradle التي سببت الفشل في الصور
-          # استبدال المصطلحات القديمة التي سببت أخطاء Unresolved reference بمصطلحات متوافقة
+          # [إصلاح جراحي] تبديل المراجع المكسورة في Kotlin (لحل خطأ Unresolved reference)
+          # الصور أظهرت فشل في مراجع extensions و extra، هذه الأوامر تصححها في ملفات المكتبات
           find node_modules -name "*.gradle" -exec sed -i 's/extensions.extraProperties/project.ext/g' {} + || true
           find node_modules -name "*.gradle" -exec sed -i 's/extra\[/project.ext\[/g' {} + || true
+          find node_modules -name "*.kts" -exec sed -i 's/extensions.extraProperties/project.ext/g' {} + || true
           
-          # إصلاح تعارض أسماء ZegoCloud في الأندرويد
+          # إصلاح تعارضات أسماء الحزم وتعارض أنواع البيانات في Zego
           find node_modules -name "AndroidManifest.xml" -exec sed -i 's/package="com.zegouikitrebuiltcallrn"/ /g' {} + || true
-          
-          # تنظيف كود التوع (typeof) المتعارض مع الإصدارات الحديثة
           find node_modules -name "index.js" -path "*zegocloud*" -exec sed -i "s/import { typeof } from 'react-native';/import { } from 'react-native';/g" {} + || true
 
       - name: 🚀 Build APK (Final Fix & Clear Cache)
         run: |
           cd mobile
           export NPM_CONFIG_LEGACY_PEER_DEPS=true
-          # إجبار البناء على تجاهل الذاكرة المؤقتة تماماً لضمان تطبيق الإصلاحات اليدوية
+          # استخدام --clear-cache لضمان عدم استخدام أي بقايا من المحاولات الفاشلة السابقة
           npx eas-cli build --platform android --profile preview --non-interactive --clear-cache
