--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,10 +25,10 @@ jobs:
       - name: 📦 Match Credentials & Prep
         run: |
           cd mobile
-          # إجبار npm على قبول تداخل التبعيات
+          # حل تعارضات npm لضمان تثبيت كافة الحزم
           echo "legacy-peer-deps=true" > .npmrc
           
-          # تهيئة إعدادات التطبيق الأساسية والأذونات
+          # [حل خطأ الصورة 1000079122] تحديد إصدارات الأندرويد (SDK) يدوياً
           echo '{
             "expo": {
               "name": "Oasis",
@@ -37,6 +37,9 @@ jobs:
               "owner": "aboahj",
               "android": {
                 "package": "com.aboahj.oasisapp",
+                "compileSdkVersion": 34,
+                "targetSdkVersion": 34,
+                "buildToolsVersion": "34.0.0",
                 "permissions": ["CAMERA", "RECORD_AUDIO", "POST_NOTIFICATIONS"]
               },
               "extra": {
@@ -57,13 +60,14 @@ jobs:
           # 3. التثبيت الشامل للمشروع
           npm install --legacy-peer-deps
           
-          # [إصلاح جراحي] تبديل المراجع المكسورة في Kotlin (لحل خطأ Unresolved reference)
-          # الصور أظهرت فشل في مراجع extensions و extra، هذه الأوامر تصححها في ملفات المكتبات
+          # [إصلاح جراحي للأخطاء في الصور 1000079058 و 1000079122]
+          # إجبار جميع المكتبات على استخدام SDK 34 وتصحيح مراجع Kotlin (extensions و extra)
+          find node_modules -name "*.gradle" -exec sed -i 's/compileSdkVersion .*/compileSdkVersion 34/g' {} + || true
           find node_modules -name "*.gradle" -exec sed -i 's/extensions.extraProperties/project.ext/g' {} + || true
           find node_modules -name "*.gradle" -exec sed -i 's/extra\[/project.ext\[/g' {} + || true
           find node_modules -name "*.kts" -exec sed -i 's/extensions.extraProperties/project.ext/g' {} + || true
           
-          # إصلاح تعارضات أسماء الحزم وتعارض أنواع البيانات في Zego
+          # إصلاح تعارضات أسماء الحزم في Zego
           find node_modules -name "AndroidManifest.xml" -exec sed -i 's/package="com.zegouikitrebuiltcallrn"/ /g' {} + || true
           find node_modules -name "index.js" -path "*zegocloud*" -exec sed -i "s/import { typeof } from 'react-native';/import { } from 'react-native';/g" {} + || true
 
@@ -71,5 +75,5 @@ jobs:
         run: |
           cd mobile
           export NPM_CONFIG_LEGACY_PEER_DEPS=true
-          # استخدام --clear-cache لضمان عدم استخدام أي بقايا من المحاولات الفاشلة السابقة
+          # استخدام --clear-cache لمسح بقايا المحاولات الفاشلة الموضحة في الصور
           npx eas-cli build --platform android --profile preview --non-interactive --clear-cache
