--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,10 +25,10 @@ jobs:
       - name: 📦 Match Credentials & Prep
         run: |
           cd mobile
-          # حل تعارضات npm لضمان تثبيت حزم Zego و Expo بنجاح
+          # حل تعارضات npm لضمان تثبيت حزم Zego و Expo بنجاح لضمان الاتصال الحقيقي
           echo "legacy-peer-deps=true" > .npmrc
           
-          # [حل خطأ الصور 1000079122 و 1000079128] تعريف الـ SDK يدوياً لحل مشكلة compileSdkVersion
+          # [حل جذري لخطأ الصور 1000079122 و 1000079172] تعريف الـ SDK يدوياً
           echo '{
             "expo": {
               "name": "Oasis",
@@ -50,24 +50,24 @@ jobs:
           
           npm pkg delete type
           
-          # 1. تثبيت أدوات بناء Expo الأساسية (لحل أخطاء الصور 1000079056 و 1000079058)
+          # تثبيت أدوات بناء Expo والمكتبات الأساسية (لحل أخطاء الصور 1000079060)
           npm install @expo/config-plugins@~8.0.0 @expo/prebuild-config expo-modules-core@~1.12.0 --save --legacy-peer-deps
-          
-          # 2. تثبيت مكتبات الإشعارات والاتصال (ZegoCloud) المطلوبة للاتصال الحقيقي
           npm install expo-notifications expo-device expo-constants crypto-js react-delegate-component --save --legacy-peer-deps
           npm install @zegocloud/zego-uikit-prebuilt-call-rn zego-zim-react-native zego-zpns-react-native --save --legacy-peer-deps
           
-          # 3. التثبيت الشامل لكافة تبعيات المشروع
           npm install --legacy-peer-deps
           
-          # [إصلاح جراحي للأخطاء الموضحة في الصور 1000079060 و 1000079122]
-          # إجبار جميع المكتبات على استخدام SDK 34 وتصحيح مراجع Kotlin المتعطلة (extensions و extra)
+          # [إصلاح جراحي حاسم]: حقن الـ Namespace لمنع تعارضات Gradle 8.3 الموضحة في السجلات
+          find node_modules -name "*.gradle" -exec sed -i '/android {/a \    namespace "com.oasis.app"' {} + || true
+
+          # [إصلاح الأخطاء الموضحة في الصور 1000079060 و 1000079122]
+          # تصحيح مراجع Kotlin (extensions و extra) وإجبار استخدام SDK 34 في كل المكتبات
           find node_modules -name "*.gradle" -exec sed -i 's/compileSdkVersion .*/compileSdkVersion 34/g' {} + || true
           find node_modules -name "*.gradle" -exec sed -i 's/extensions.extraProperties/project.ext/g' {} + || true
           find node_modules -name "*.gradle" -exec sed -i 's/extra\[/project.ext\[/g' {} + || true
           find node_modules -name "*.kts" -exec sed -i 's/extensions.extraProperties/project.ext/g' {} + || true
           
-          # إصلاح تعارضات أسماء الحزم في مكتبات Zego لضمان عبور مرحلة التجميع النهائي
+          # إصلاح تعارضات ZegoCloud في ملفات تعريف الأندرويد لضمان استقرار الاتصال
           find node_modules -name "AndroidManifest.xml" -exec sed -i 's/package="com.zegouikitrebuiltcallrn"/ /g' {} + || true
           find node_modules -name "index.js" -path "*zegocloud*" -exec sed -i "s/import { typeof } from 'react-native';/import { } from 'react-native';/g" {} + || true
 
@@ -75,5 +75,5 @@ jobs:
         run: |
           cd mobile
           export NPM_CONFIG_LEGACY_PEER_DEPS=true
-          # استخدام --clear-cache لمسح بقايا المحاولات الفاشلة الموضحة في صور السجلات وضمان بناء نظيف
+          # استخدام --clear-cache لمسح بقايا المحاولات الفاشلة الموضحة في الصور وضمان بناء نظيف تماماً
           npx eas-cli build --platform android --profile preview --non-interactive --clear-cache
