--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
       - master
-  workflow_dispatch: # مضاف: للسماح لك بتشغيل البناء يدوياً من تبويب Actions
+  workflow_dispatch: # يسمح بتشغيل البناء يدوياً من تبويب Actions
 
 jobs:
   build:
@@ -53,17 +53,19 @@ jobs:
           npm pkg delete type
           
           # تثبيت المكتبات اللازمة للاتصال الحقيقي ومعالجة أخطاء المراجع
-          npm install @expo/config-plugins@~8.0.0 @expo/prebuild-config expo-modules-core@~1.12.0 --save --legacy-peer-deps
-          npm install expo-notifications expo-device expo-constants crypto-js react-delegate-component --save --legacy-peer-deps
-          npm install @zegocloud/zego-uikit-prebuilt-call-rn zego-zim-react-native zego-zpns-react-native --save --legacy-peer-deps
-          
           npm install --legacy-peer-deps
+          npm install @expo/config-plugins @expo/prebuild-config --save-dev --legacy-peer-deps
           
-          # [إصلاح جراحي حاسم]: حقن الـ Namespace لمنع تعارضات Gradle 8.3
-          find node_modules -name "*.gradle" -exec sed -i '/android {/a \    namespace "com.oasis.app"' {} + || true
+          # [إصلاح حاسم لصور الأخطاء 1000079128 و 1000079172] 
+          # توليد مجلد الأندرويد يدوياً لحقن الإعدادات المفقودة قبل البناء
+          npx expo prebuild --platform android --no-install
+          
+          # حقن الـ SDK 34 والـ Namespace مباشرة في ملفات الأندرويد الناتجة
+          find android -name "build.gradle" -exec sed -i 's/compileSdkVersion .*/compileSdkVersion 34/g' {} + || true
+          find android -name "build.gradle" -exec sed -i 's/targetSdkVersion .*/targetSdkVersion 34/g' {} + || true
+          find android -name "build.gradle" -exec sed -i '/android {/a \    namespace "com.oasis.app"' {} + || true
 
-          # [إصلاح الأخطاء الموضحة في صور السجلات]
-          find node_modules -name "*.gradle" -exec sed -i 's/compileSdkVersion .*/compileSdkVersion 34/g' {} + || true
+          # تصحيح مراجع Kotlin (extensions) التي ظهرت في سجلاتك السابقة
           find node_modules -name "*.gradle" -exec sed -i 's/extensions.extraProperties/project.ext/g' {} + || true
           find node_modules -name "*.gradle" -exec sed -i 's/extra\[/project.ext\[/g' {} + || true
           find node_modules -name "*.kts" -exec sed -i 's/extensions.extraProperties/project.ext/g' {} + || true
